--- a/client/src/App.css
+++ b/client/src/App.css
@@ -95,7 +95,7 @@ body {
   cursor: pointer;
   margin-left: auto;
   height: 100;
-  padding: 0 15px;
+  padding:0 20px 0 0
 }
 
 .menu-item:hover {
@@ -266,7 +266,9 @@ body {
   overflow: auto;
   flex-shrink: 0;
 }
-
+h1{
+  text-align: center;
+}
 .main-container {
   padding: 25px;
   flex-grow: 1;
