--- a/client/src/App.css
+++ b/client/src/App.css
@@ -32,21 +32,29 @@
 
 img {
   max-width: 100%;
+  max-height: 100%;
+  width: 280px;
+  height: 280px;
 }
 .video-app {
   background: linear-gradient(to right, #d2f0fa, #effafd);
 }
 .logo-title {
-  font-size: 20px;
+  font-size: 25px;
   font-family: "yg-jalnan";
-  margin-left: 2%;
+  margin-left: 50%;
   text-align: center;
   color: var(--logo-color);
 }
 .side-title {
   text-align: center;
   color: var(--logo-color);
-  font-size: x-large;
+  font-weight: 700;
+  font-size: 40px
+  
+}
+.fas fa-user-plus{
+  margin-left: 80%;
 }
 html {
   box-sizing: border-box;
@@ -54,6 +62,7 @@ html {
 }
 .input-field {
   text-align: center;
+  color: black
 }
 .new1 {
   margin-left: 10px;
@@ -69,10 +78,18 @@ body {
   font-weight: 600;
   min-height: -webkit-fill-available;
 }
+.mypage-Container{
+  width: 500px;
+  height: 600px;
+  margin-left: 30%;
+  text-align: center;
+}
 
 .card_image1 {
-  width: 500px;
-  height: 250px;
+  max-width: 100%;
+  max-height: 100%;
+  width: 300px;
+  height: 400px;
   margin-left: 5%;
   object-fit: cover;
 }
@@ -98,17 +115,18 @@ body {
 }
 .card_photo-name {
   background-color: white;
-  height: 40px;
+  height: 50px;
   width: 290px;
   border-radius: 0 0 10px 10px;
   display: flex;
   align-items: center;
   margin-left: 10%;
+  text-align: left;
 }
 .card_photo-name1 {
   background-color: white;
   height: 35px;
-  width: 500px;
+  width: 300px;
   border-radius: 0 0 10px 10px;
   display: flex;
   align-items: center;
@@ -164,22 +182,52 @@ body {
 
 .wrap {
   height: 100%;
-  width: 80%;
+  width: 100%;
   background-position: bottom;
   background-size: cover;
-
   background: linear-gradient(to right, #fdfdfd, #f7dbdb);
 }
+.wrap1 {
+  height: 100%;
+  width: 90%;
+  background-size: cover;
+  background-position: center;  
+}
+.item2{
+  margin-top: 10%;
+  font-size: 1.5rem;
+  text-align: center;
+  color: #ffff;
+  font-weight: 900;
+}
+.item3{
+  font-size: 1.5rem;
+  margin-top: 2%;
+  margin-left: 2%;
+  font-family: 'Roboto Condensed', sans-serif;
+  position: relative;
+  font-weight: 900;
+  text-align: left;
+  color:black;
+}
+.item4{
+font-size: 15px;
+}
+.item5{
+font-size: 15px;
+margin-left: 10px;
+}
+
 .form-wrap {
-  width: 400px;
+  width: 450px;
   height: 500px;
   position: relative;
-  margin: 18% auto;
-  margin-left: 40%;
-  background: linear-gradient(to right, #f3f3f3, #eff3f1);
+  margin: 10%;
+  margin-left: 30%;
   padding: 5px;
   overflow: hidden;
   align-items: center;
+  
 }
 
 .footer-wrap {
@@ -188,10 +236,12 @@ body {
 .picture {
   width: 340px;
   height: 280px;
+  object-fit: cover;
   text-align: left;
   margin-left: 10px;
   background-color: white;
   background-size: cover;
+
 }
 
 .grid-image {
@@ -211,13 +261,17 @@ body {
 }
 
 .item {
-  font-size: 30px;
-  color: rgb(19, 1, 1);
+  font-size: 20px;
+  color: #ffff;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 600;
+  text-align: bottom;
   margin-left: 10px;
+  margin-top: 5%;
 }
 .item1 {
   font-size: 20px;
-  color: rgb(19, 1, 1);
+  color: rgb(255, 255,255 );
   margin-left: 10px;
 }
 .button-wrap {
@@ -231,6 +285,7 @@ body {
   padding-left: 50px;
   padding-right: 20px;
   justify-content: center;
+  color: #000000;
 }
 .input-group {
   top: 130px;
@@ -250,15 +305,34 @@ body {
   text-align: center;
   margin-left: 5%;
   color: rgb(19, 1, 1);
+  font-size: 15px;
 }
 .member {
   font-size: 30px;
   color: rgb(19, 1, 1);
 }
+.member2 {
+  font-size: 25px;
+  color: black;
+  margin-top: 15%;
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
 
 .member1 {
   font-size: 20px;
-  margin-left: 10px;
+  margin-top: 5%;
+  margin-left: 20px;
+  margin-right: 70px;
+  margin-bottom: 10px;
+  color: rgb(19, 1, 1);
+}
+.member3 {
+  font-size: 25px;
+  margin-top: 10%;
+  margin-left: 20px;
+  margin-right: 70px;
+  margin-bottom: 10px;
   color: rgb(19, 1, 1);
 }
 
@@ -322,8 +396,15 @@ body {
   font-size: 40px;
   font-family: "yg-jalnan";
   margin-left: 2%;
-
-  margin-top: 20%;
+  margin-top: 5%;
+  text-align: center;
+  color: var(--logo-color);
+}
+.main-header3 {
+  font-size: 60px;
+  font-family: "yg-jalnan";
+  margin-left: 2%;
+  margin-top: 30%;
   text-align: center;
   color: var(--logo-color);
 }
@@ -365,6 +446,7 @@ body {
   margin-left: 80%;
 }
 .submit {
+  border-width: medium;
   width: 60%;
   padding: 10px 30px;
   cursor: pointer;
@@ -372,7 +454,8 @@ body {
   margin-top: 8%;
   margin-left: 20%;
   text-align: center;
-  background: linear-gradient(to right, #78d9fa, #eff3f1);
+  background: linear-gradient(to right, #fdd5d5, #fdfdfd);
+
   border: 0;
   outline: none;
   border-radius: 30px;
@@ -394,7 +477,12 @@ body {
     inset 5px 5px 10px 0px rgba(0, 0, 0, 0.12),
     inset 2px 2px 3px 0px rgba(0, 0, 0, 0.07),
     1px 2px 3px 0px rgba(0, 0, 0, 0.1);
-}
+    font-size: 20px;
+    
+    margin-bottom: 20px;
+
+  }
+
 .video-app {
   display: flex;
   flex-direction: column;
@@ -416,7 +504,10 @@ body {
 }
 .btn morph {
   width: 300px;
-  margin-left: 20px;
+  margin-left: 80px;
+}
+.fas fa-user-plus{
+  margin-left: 70px;
 }
 .header {
   height: 90px;
@@ -464,6 +555,7 @@ body {
   color: #000000;
 }
 .header-menu2 {
+  margin-top: 10px;
   margin-right: 12px;
   margin-left: 12px;
   color: #000000;
